# secret-editor

./: Cargo.toml  README.md
src/: gather_secret.rs  library.rs  main.rs
